--- a/angular.json
+++ b/angular.json
@@ -66,6 +66,9 @@
               "browserTarget": "DocGestionnaireFront:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
